# SSystemOpt

./: .gitignore  SSystemOpt.cabal  SSystems.cabal  TAGS  stack.yaml
Example Models/: Untitled.txt  data  sbml.py  sbml.xml  ss_5genes  ss_5genes.txt  ss_branch  ss_branch.txt  ss_cascade.txt  tank-model.txt
ExampleModels/: .tex  Untitled.txt  sbml.py  ss_branch.txt  ss_cascade.txt
ExampleModels/.SloppyCell/: diff.pickle
ExampleModels/Model1/: data.py  jacobian  model.txt  sbml.py  sbml.xml  sensitivities  sensitivities.txt
ExampleModels/Model2/: model.txt  sbml.xml
ExampleModels/Model3/: sbml.xml
ExampleModels/ss_cascade/: experiment.txt  sbml.xml
ExampleModels/ss_cascade copy/: data.py  experiment.txt  learn.py  sbml.xml
Working/: config  functions.py  model
app/: Configure.hs  Simulate.hs
data/: ss_5genes.txt  ss_5genes_output.txt
src/: CosmoABC.hs  Experiments.hs  Expr.hs  Parse.hs  SBML.hs  SSystem.hs  Search.hs  Solver.hs  Square.hs  Utils.hs  Zipper.hs
src/Data/: Utils.hs
src/Numeric/: SSystem.hs  Search.hs  Solver.hs
src/Text/Parse/: ODEBench.hs
test/: Spec.hs  ssystems-tests.hs
