name:                SSystemOpt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/oisdk/SSystemOpt#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           MIT
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Parse.ODEBench
                     , Numeric.Solver
                     , Numeric.SSystem
                     , Numeric.Search
  other-modules:       Data.Utils
  build-depends:       base >= 4.7 && < 5
                     , parsers >= 0.12
                     , trifecta >= 1.6
                     , vector >= 0.11
                     , hmatrix-gsl >= 0.17
                     , hmatrix >= 0.17
                     , lens >= 4.14
                     , mtl >= 2.2
                     , containers >= 0.5
                     , ansi-wl-pprint >= 0.6
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite SSystemOpt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SSystemOpt
                     , QuickCheck >= 2.8
                     , doctest >= 0.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/SSystemOpt
