name:                SSystems
version:             0.1.0.0
license:             MIT
author:              Donnacha Oisin Kidney
maintainer:          oisin.kidney@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solver
                     , SSystem
                     , Utils
                     , Parse
                     , Search
                     , SBML
                     , Experiments
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , text
                     , mtl
                     , containers
                     , QuickCheck >= 2.8
                     , lens
                     , Expr
                     , taggy
                     , parsers
                     , trifecta
                     , scientific >= 0.3
  ghc-options:         -Wall
  default-language:    Haskell2010

executable configure
  hs-source-dirs:      app
  main-is:             Configure.hs
  build-depends:       base >= 4.7 && < 5
                     , SSystems
                     , turtle
                     , text
                     , containers
                     , mtl
                     , lens
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-language:    Haskell2010

Test-Suite ssystems-tests
  Type:                exitcode-stdio-1.0
  main-is:             test/ssystems-tests.hs
  build-depends:       base
                     , QuickCheck
                     , SSystems >= 0.1
                     , text
                     , comonad
                     , doctest
                     , taggy >= 0.2
                     , trifecta >= 1.5
  default-language:    Haskell2010
